docs: create auction api docs
